# hw13

part_1/: main.py  pyproject.toml
part_1/migrations/: env.py
part_1/src/database/: db.py
part_1/src/repository/: contacts.py  users.py
part_1/src/routes/: auth.py  avatar.py  contacts.py
part_1/src/services/: auth.py  email.py
part_2/: pyproject.toml
